# OpenGlassBox-Python

./: .gitignore  AUTHOR.md  DEVELOPER_GUIDE.md  DSL_SPEC.md  MANIFEST.in  Makefile  PORTING_SESSION_SUMMARY.md  README.md  debug_agent_lifecycle.py  debug_agent_pathfinding.py  debug_agent_types.py  debug_timing.py  fix_imports.py  fix_naming_convention.py  fix_test_imports.py  pyproject.toml  requirements.txt  setup.py  test_script_parser.py
demo/: README.md
demo/data/Simulations/: TestCityFixed.txt
demo/src/: check_testcity_load.py  city_setup.py  demo.py  demo_enhanced.py  demo_fixed.py  input_handler.py  main.py  run_demo.py  ui_renderer.py
demo/src/Display/: debug_ui.py
demo/src/ui_renderer/: __init__.py  colors.py  coordinate_system.py  debug_panels.py  simulation_renderer.py  ui_panels.py
diary/: day1.md  day2.md  day4.md
src/: agent.py  city.py  config.py  dijkstra.py  map.py  map_coordinates_inside_radius.py  map_random_coordinates.py  node.py  path.py  resource.py  resources.py  rule.py  rule_command.py  rule_value.py  script_parser.py  simulation.py  unit.py  vector.py
tests/: debug_agent_creation.py  debug_agent_movement.py  debug_dijkstra_trace.py  debug_pathfinding_details.py  debug_rule_execution.py  debug_simulation.py  debug_unit_targets.py  debug_way_splitting.py  test_agent.py  test_all.py  test_city.py  test_command.py  test_coord_inside_radius.py  test_debug_ui.py  test_demo_integration.py  test_dijkstra.py  test_fixed_scenario.py  test_map.py  test_node.py  test_path.py  test_performance_benchmarks.py  test_resource.py  test_resources.py  test_rules_execution.py  test_script_parser.py  test_simulation.py  test_unit.py  test_value.py  test_vector.py
